@@ -1,9 +1,0 @@
-if ENABLE_TINT2CONF
-bin_PROGRAMS = tint2conf
-dist_bin_SCRIPTS = tintwizard.py
-tint2conf_SOURCES = main.c theme_view.c theme_view.h ../util/common.c ../version.h
-INCLUDES = -I../util
-
-AM_CFLAGS += @TINT2CONF_CFLAGS@
-LIBS += @TINT2CONF_LIBS@
-endif
