@@ -1,3 +1,0 @@
-
-#define VERSION_STRING "@PACKAGE_VERSION@"
-
